@@ -5,6 +5,7 @@
 #include "string.h"
 #include "ol_lrc_fetch_sogou.h"
 #include "ol_lrc_fetch_qianqian.h"
+#include "ol_lrc_fetch_minilyrics.h"
 #include "ol_utils.h"
 #include "ol_debug.h"
 
@@ -72,6 +73,7 @@ ol_lrc_fetch_init ()
 {
   ol_lrc_fetch_add_engine (ol_lrc_fetch_sogou_engine ());
   ol_lrc_fetch_add_engine (ol_lrc_fetch_qianqian_engine ());
+  ol_lrc_fetch_add_engine (ol_lrc_fetch_minilyrics_engine ());
 }
 
 static int
